--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body{
 #header{
     min-height: 10px;
     /* background-color: orange; */
+    background-color: #ffcfdf;
+background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
 
     
     
@@ -19,7 +21,9 @@ body{
 }
 .topnav {
   overflow: hidden;
-  background-color:#efefef;
+  background-color: #ffcfdf;
+background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
+
 
 }
 
@@ -117,6 +121,8 @@ body{
 .container{
   display: flex;
   flex-wrap: wrap;
+  background-color: #ffcfdf;
+background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
  
   
 
@@ -124,15 +130,24 @@ body{
 .section{
   
   flex-grow: 2;
- padding: 5px 5px 0px 5px;
+  padding: 5px 5px 0px 5px;
+  
   
  
+}
+.section:hover{
+  box-shadow: 3px 5px 7px #666666;
+}
+.section h2{
+  text-decoration: underline;
+  font-size: bold;
+  text-transform: capitalize;
 }
 .section p{
   max-height: 100%;
   min-width: 100%;
   object-fit: cover;
- ;
+  
   
 }
 
@@ -155,7 +170,8 @@ body{
 #footer{
     min-height: 100px;
     margin-top: 3%;
-    background-color: white;
+    background-color: #ffcfdf;
+background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
 }
 
 /* FOOTER */
@@ -237,7 +253,7 @@ li i {
 
 .social-media {
   width: 100%;
-  color: #fff;
+  color: black;
   text-align: center;
   font-size: 20px;
 }
@@ -251,12 +267,13 @@ li i {
   width: 25px;
   margin: 20px 10px;
   padding: 4px;
-  color: #fff;
+  color: black;
   transition: 0.5s;
 }
 
 .social-media i:hover {
   transform: scale(1.5);
+  color: #ff9800;
 }
 
 .footer-bottom {
