--- a/about/style.css
+++ b/about/style.css
@@ -1,11 +1,11 @@
 body{
-    background-color: #efefef;
+  background-color: #ffcfdf;
+  background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
   }
   #header{
       min-height: 10px;
       /* background-color: orange; */
-      background-color: #ffcfdf;
-  background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
+     
   
       
       
@@ -21,8 +21,7 @@ body{
   }
   .topnav {
     overflow: hidden;
-    background-color: #ffcfdf;
-  background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
+
   
   
   }
@@ -87,37 +86,33 @@ body{
   #body{
       min-height: 400px;
       margin-top: 3%;
-      background-color: #efefef;
+      
   }
-  #hero-image {
-    height: 100vh;
-    background: #000 url("../images/hero.jpg") no-repeat fixed bottom;
-    background-size: cover;
-    position: relative;
-  }
-  
-  .overlay {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-  }
-  
-  .tag-line {
-    position: absolute;
-    top: 50%;
-    width: 100%;
+  .container{
     text-align: center;
-    font-size: 50px;
-    font-weight: bolder;
-    color: white;
-    text-transform: uppercase;
-    opacity: 0.9;
+   
   }
+  .cont{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    flex-basis: 50%;
+
+  }
+ .text{
+   justify-content: center; 
+  
+  
+ }.text h2{
+   text-decoration: underline;
+   text-transform: capitalize;
+ }
+
   
   .bodys {
     min-height: 100vw;
     margin-top: 3%;
-    background-color: #efefef;
+   
   
   }
   .bodys h1{
@@ -144,8 +139,7 @@ body{
   #footer{
       min-height: 100px;
       margin-top: 3%;
-      background-color: #ffcfdf;
-  background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
+      
   }
   
   /* FOOTER */
