--- a/contact/style.css
+++ b/contact/style.css
@@ -84,67 +84,45 @@ body{
   
   } */
   #body{
-      min-height: 400px;
+     
       margin-top: 3%;
       
   }
-  .container{
-    text-align: center;
-   
-  }
-  .cont{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-   
-   
-    
+  /* Contact */
 
-  }
- .text{
-   width: 245px;
-   text-align: left;
-   padding: 10px;
-   box-shadow:0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23);
-   margin-bottom: 10px;
-   
-  
- }.text h2{
-   text-decoration: underline;
-   text-transform: capitalize;
-   text-align: center;
- }
+#contact {
 
-  
-  .bodys {
-    min-height: 100vw;
-    margin-top: 3%;
-   
-  
-  }
-  .bodys h1{
-    text-align: center;
-  }
-  .gallery {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-  }
-  .item {
-    flex: 1 0 15em;
-    margin: 1em;
-     box-shadow:0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23);
-     padding: 10px;
-  }
-  .item:hover{
-    transform:scale(1.1);
-  }
-  img {
-    display: block;
-    width: 100%;
-  }
+ width: 100vw;
+ height: 100vh;
+ text-align: center;
   
   
+}
+form{
+  height: 100px;
+}
+#contact input{
+  height: 50px;
+  margin: 5px;  
+  width: 30%;
+}
+#contact textarea{
+  height: auto;
+  width: 60%;
+}
+
+
+
+#contact button {
+  width: 70%;
+  height: 40px;
+}
+
+#contact button:hover {
+  background-color: #333;
+  color: #fff;
+  cursor: pointer;
+}
   
   
   
