--- a/about/style.css
+++ b/about/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Condiment&display=swap');
 body{
   background-color: #ffcfdf;
   background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
@@ -5,6 +6,7 @@ body{
   #header{
       min-height: 10px;
       /* background-color: orange; */
+      font-family: 'Condiment', cursive;
      
   
       
@@ -157,7 +159,7 @@ body{
   /* FOOTER */
   .footer {
     width: 100%;
-   
+    font-family: 'Condiment', cursive;
     display: block;
   }
   
