--- a/contact/style.css
+++ b/contact/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Condiment&display=swap');
+
 body{
   background-color: #ffcfdf;
   background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
@@ -5,6 +7,7 @@ body{
   #header{
       min-height: 10px;
       /* background-color: orange; */
+      font-family: 'Condiment', cursive;
      
   
       
@@ -95,11 +98,24 @@ body{
  width: 100vw;
  height: 100vh;
  text-align: center;
+
   
   
 }
+.container{
+  font-weight: bolder;
+  font-size: 30px;
+}
+.container h3  {
+  font-family: 'Condiment', cursive;
+
+}
+.container p  {
+  font-family: 'Condiment', cursive;
+
+}
 form{
-  height: 100px;
+  height: 100vh;
 }
 #contact input{
   height: 50px;
@@ -107,7 +123,7 @@ form{
   width: 30%;
 }
 #contact textarea{
-  height: auto;
+  height: 150px;
   width: 60%;
 }
 
@@ -115,7 +131,8 @@ form{
 
 #contact button {
   width: 70%;
-  height: 40px;
+  height: 50px;
+  margin: 20px;
 }
 
 #contact button:hover {
@@ -135,7 +152,8 @@ form{
   /* FOOTER */
   .footer {
     width: 100%;
-   
+    
+    font-family: 'Condiment', cursive;
     display: block;
   }
   
