--- a/about/style.css
+++ b/about/style.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Condiment&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Condiment&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@500&display=swap');
+
 body{
   background-color: #ffcfdf;
   background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
@@ -6,7 +9,8 @@ body{
   #header{
       min-height: 10px;
       /* background-color: orange; */
-      font-family: 'Condiment', cursive;
+    font-family: 'Six Caps', sans-serif;
+      
      
   
       
@@ -37,7 +41,7 @@ body{
     text-decoration: none;
     font-size: 14px;
     font-weight: bolder;
-    text-transform: uppercase;
+    text-transform: capitalize;
   }
   
   .topnav a:hover {
@@ -88,7 +92,7 @@ body{
   #body{
       min-height: 400px;
       margin-top: 3%;
-      
+      font-family: 'Josefin Slab', serif;
   }
   .container{
     text-align: center;
@@ -159,7 +163,7 @@ body{
   /* FOOTER */
   .footer {
     width: 100%;
-    font-family: 'Condiment', cursive;
+    font-family: 'Josefin Slab', serif;
     display: block;
   }
   
