--- a/contact/style.css
+++ b/contact/style.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Condiment&display=swap');
-
+/* @import url('https://fonts.googleapis.com/css2?family=Condiment&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@500&display=swap');
 body{
   background-color: #ffcfdf;
   background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
@@ -7,7 +8,7 @@ body{
   #header{
       min-height: 10px;
       /* background-color: orange; */
-      font-family: 'Condiment', cursive;
+      font-family: 'Six Caps', sans-serif;
      
   
       
@@ -38,7 +39,7 @@ body{
     text-decoration: none;
     font-size: 14px;
     font-weight: bolder;
-    text-transform: uppercase;
+    text-transform: capitalize;
   }
   
   .topnav a:hover {
@@ -89,6 +90,7 @@ body{
   #body{
      
       margin-top: 3%;
+      font-family: 'Josefin Slab', serif;
       
   }
   /* Contact */
@@ -107,11 +109,11 @@ body{
   font-size: 30px;
 }
 .container h3  {
-  font-family: 'Condiment', cursive;
+  font-family: 'Josefin Slab', serif;
 
 }
 .container p  {
-  font-family: 'Condiment', cursive;
+  font-family: 'Josefin Slab', serif;
 
 }
 form{
@@ -120,19 +122,19 @@ form{
 #contact input{
   height: 50px;
   margin: 5px;  
-  width: 30%;
+  width: 50%;
 }
 #contact textarea{
-  height: 150px;
+  height: 100px;
   width: 60%;
+  margin-bottom: 10px;
 }
 
 
 
 #contact button {
   width: 70%;
-  height: 50px;
-  margin: 20px;
+  margin-bottom: 10px;
 }
 
 #contact button:hover {
@@ -153,7 +155,7 @@ form{
   .footer {
     width: 100%;
     
-    font-family: 'Condiment', cursive;
+    font-family: 'Josefin Slab', serif;
     display: block;
   }
   
