--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@500&display=swap');
 body{
-  background-color: #efefef;
+  /* background-color: #efefef; */
+  background-image: linear-gradient(315deg, #ffcfdf 0%, #b0f3f1 74%);
 }
 #header{
     min-height: 10px;
